# PPI-prediction

./: .env.template  .flake8  .gitignore  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature-addition.md
.github/workflows/: tests.yml
config/: config.template.yml
core/: config.py
data/: ppis.xlsx
data/interim/: sequence_lengths.csv  triplets.csv
data/processed/: colabfold_stats.csv  negative_ppis.csv  positive_ppis.csv
data/raw/: MANE_GencodeID.csv  README.md  cancer_driver_gene_list.csv  isoform_sequences.xlsx
src/data/: aws_utils.py  bio_apis.py  combine_msa.py  create_protein_triplets.py  data_filtering.py  data_processing.py  data_pruning.py  fasta_one_to_many.py  fetch_fastas.py  fetch_interactors.py  fetch_msas.py  find_gencode_ids.py  generate_negative_dataset.py  generate_positive_dataset.py
src/features/: batch_complexes.py  collect_colabfold_stats.py  compute_frustration.R  feature_calculator.py  file_utils.py  find_stats.py  frustration.py  frustration_calculator.py  interaction_site.py  run_colabfold.py  surface_area.py  surface_area_calculator.py
src/visualization/: ConfidencePlotter.py  FrustrationPlotter.py  LengthPlotter.py  Plotter.py  SAPlotter.py  find_sequence_lengths.py  plotter.py
test/: data_test.py  test.py
test/test_data/: MANE_GencodeID_test.csv  cancer_driver_gene_list_test.csv  positive_ppis_test.csv  ppis_test2.xlsx  test_gene2.txt  test_ppis.xlsx  test_ppis1.xlsx  test_remove_ground_truth.xlsx
tests/: data_test.py  feature_test.py  feature_test.yml
tests/test_data/: MANE_summary_v3_test.csv  colabfold_stats_test.csv  ppis_test3.xlsx  subcellular_location_test.csv  test_gene1.txt  test_msa.a3m
tests/test_data/colabfold/0/: CDKN2A_CYCS.msa.a3m  CDKN2A_CYCS.msa_predicted_aligned_error_v1.json  CDKN2A_CYCS.msa_scores_rank_001_alphafold2_multimer_v3_model_5_seed_000.json  CDKN2A_CYCS.msa_scores_rank_002_alphafold2_multimer_v3_model_3_seed_000.json  CDKN2A_CYCS.msa_scores_rank_003_alphafold2_multimer_v3_model_4_seed_000.json  CDKN2A_CYCS.msa_scores_rank_004_alphafold2_multimer_v3_model_2_seed_000.json  CDKN2A_CYCS.msa_scores_rank_005_alphafold2_multimer_v3_model_1_seed_000.json  CDKN2A_TRAPPC2L.msa.a3m  CDKN2A_TRAPPC2L.msa_predicted_aligned_error_v1.json  CDKN2A_TRAPPC2L.msa_scores_rank_001_alphafold2_multimer_v3_model_2_seed_000.json  CDKN2A_TRAPPC2L.msa_scores_rank_002_alphafold2_multimer_v3_model_1_seed_000.json  CDKN2A_TRAPPC2L.msa_scores_rank_003_alphafold2_multimer_v3_model_4_seed_000.json  CDKN2A_TRAPPC2L.msa_scores_rank_004_alphafold2_multimer_v3_model_5_seed_000.json  CDKN2A_TRAPPC2L.msa_scores_rank_005_alphafold2_multimer_v3_model_3_seed_000.json  CDKN2C_CD24.msa.a3m  CDKN2C_CD24.msa_predicted_aligned_error_v1.json  CDKN2C_CD24.msa_scores_rank_001_alphafold2_multimer_v3_model_4_seed_000.json  CDKN2C_CD24.msa_scores_rank_002_alphafold2_multimer_v3_model_2_seed_000.json  CDKN2C_CD24.msa_scores_rank_003_alphafold2_multimer_v3_model_1_seed_000.json  CDKN2C_CD24.msa_scores_rank_004_alphafold2_multimer_v3_model_3_seed_000.json  CDKN2C_CD24.msa_scores_rank_005_alphafold2_multimer_v3_model_5_seed_000.json  SRSF3_GGTA1.msa.a3m  SRSF3_GGTA1.msa_predicted_aligned_error_v1.json  SRSF3_GGTA1.msa_scores_rank_001_alphafold2_multimer_v3_model_4_seed_000.json  SRSF3_GGTA1.msa_scores_rank_002_alphafold2_multimer_v3_model_1_seed_000.json  SRSF3_GGTA1.msa_scores_rank_003_alphafold2_multimer_v3_model_3_seed_000.json  SRSF3_GGTA1.msa_scores_rank_004_alphafold2_multimer_v3_model_5_seed_000.json  config.json  log.txt  (+1 more)
tests/test_data/msas/: ENST00000366843_ENAH.msa.a3m  ENST00000376140_ABI1.msa.a3m  ENST00000586790_CCDC106.msa.a3m
tests/test_data/test_gene1/: ENSG00000002822_ENST00000421113.fasta
(+81 files in other folders)
