[tool.poetry]
name = "ppi-prediction"
version = "0.1.0"
description = "A python library for predicting protein-protein interactions"
authors = ["Jackson Howe <j2howe@uwaterloo.ca>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/JacksonH44/PPI-prediction"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.9.5"
pandas = ">=2.2.2"
pyyaml = ">=6.0.1"
python-calamine = ">=0.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.2"
pytest-asyncio = ">=0.23.7"
coverage = ">=7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = "."
