[tool.poetry]
name = "ppi-prediction"
version = "0.1.0"
description = "A python library for predicting protein-protein interactions"
authors = ["Jackson Howe <j2howe@uwaterloo.ca>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/JacksonH44/PPI-prediction"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.9.5"
pandas = ">=2.2.2"
pyyaml = ">=6.0.1"
python-calamine = ">=0.2.0"
requests = ">=2.32.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = ">=7.5.3"
pytest = ">=8.2.2"
pytest-asyncio = ">=0.23.7"
pytest-cov = ">=5.0.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=24.4.2"
flake8 = ">=7.1.0"
mypy = ">=1.10.0"
pandas-stubs = ">=2.2.2.240603"
types-requests = ">=2.32.0.20240602"

[tool.mypy]
files = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
