[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ppi-prediction"
package-mode = false
version = "0.1.0"
description = "A python library for predicting protein-protein interactions"
authors = ["Jackson Howe <j2howe@uwaterloo.ca>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/JacksonH44/PPI-prediction"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
aiohttp = ">=3.9.5"
boto3 = ">=1.34.131"
contact-map = "^0.7.0"
matplotlib = "^3.9.1"
mdtraj = "1.9.9"
numpy = ">=1.26.4"
pandas = ">=2.2.2"
pyyaml = ">=6.0.1"
python-calamine = ">=0.2.0"
requests = ">=2.32.3"
types-boto3 = ">=1.0.2"
biopython = "^1.84"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = ">=7.5.3"
pytest = ">=8.2.2"
pytest-asyncio = ">=0.23.7"
pytest-cov = ">=5.0.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = """
--cov
"""

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=24.4.2"
flake8 = ">=7.1.0"
mypy = ">=1.10.0"
pandas-stubs = ">=2.2.2.240603"
types-requests = "<2.31.0.7"

[tool.mypy]
files = ["src/"]
exclude = ["core"]
follow_imports = "silent"

[tool.coverage.run]
omit = [
    "config/*",
    "tests/*",
    "src/__init__.py",
    "src/data/__init__.py",
    "core/*"
]

[tool.coverage.report]
show_missing = true
